só falta a página de contatos

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<img alt="logomarca da empresa" src="./img/logo.png">
 		<ul class="navegacao">
 			<a href="#"><li>Home</li></a>
-			<li>Serviços</li>
-			<li>Sobre Nós</li>
+			<a href="servico.html"><li>Serviços</li></a>
+			<a href="AboutUs.html"><li>Sobre Nós</li></a>
 			<li>Contato</li>
 		</ul>
 	</div>
