--- a/AboutUs.html
+++ b/AboutUs.html
@@ -13,8 +13,9 @@
 			<a href="index.html"><li>Home</li></a>
 			<a href="servico.html"><li>Serviços</li></a>
 			<a href="#"><li>Sobre Nós</li></a>
-			<li>Contato</li>
+			<a href="contato.html"><li>Contato</li></a>
 		</ul>
+	</div>
 	<div id="sobre">
 		<h1>Sobre a Empresa</h1>
 		<p>Occaecat laborum ut enim elit deserunt ut in dolore adipisicing dolor est ullamco culpa nulla in. Consequat commodo id fugiat ut mollit aliquip proident irure consequat eu. Aliqua tempor dolor culpa voluptate ex aliqua mollit elit ullamco anim in. Culpa sunt commodo excepteur eu est aliqua voluptate aliqua excepteur consectetur mollit eu cillum minim dolore sed. Est eu ut laborum culpa proident excepteur dolor velit minim ea in ut. Id nisi cupidatat sunt magna sunt proident sint ut velit mollit aliqua fugiat sint voluptate ut fugiat. Qui incididunt quis anim ut consectetur irure quis sint et quis minim mollit duis dolore dolor dolor do elit.</p>
@@ -23,6 +24,6 @@
 		<h1>Nossa História</h1>
 		<p>Occaecat laborum ut enim elit deserunt ut in dolore adipisicing dolor est ullamco culpa nulla in. Consequat commodo id fugiat ut mollit aliquip proident irure consequat eu. Aliqua tempor dolor culpa voluptate ex aliqua mollit elit ullamco anim in. Culpa sunt commodo excepteur eu est aliqua voluptate aliqua excepteur consectetur mollit eu cillum minim dolore sed. Est eu ut laborum culpa proident excepteur dolor velit minim ea in ut. Id nisi cupidatat sunt magna sunt proident sint ut velit mollit aliqua fugiat sint voluptate ut fugiat. Qui incididunt quis anim ut consectetur irure quis sint et quis minim mollit duis dolore dolor dolor do elit.</p>
 	</div>	
-	</div>
+	
 </body>
 </html>
