--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="#"><li>Home</li></a>
 			<a href="servico.html"><li>Serviços</li></a>
 			<a href="AboutUs.html"><li>Sobre Nós</li></a>
-			<li>Contato</li>
+			<a href="contato.html"><li>Contato</li></a>
 		</ul>
 	</div>
 	<div id="banner"></div>
