--- a/servico.html
+++ b/servico.html
@@ -14,7 +14,7 @@
 			<a href="index.html"><li>Home</li></a>
 			<a href="#"><li>Serviços</li></a>
 			<a href="AboutUs.html"><li>Sobre Nós</li></a>
-			<li>Contato</li>
+			<a href="contato.html"><li>Contato</li></a>
 		</ul>
 	</div>
 	<div id="servicos1">
